--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "main": "app.js",
   "dependencies": {
     "express-session": "^1.15.4",
+    "hbs": "^4.0.1",
+    "mongodb": "^2.2.30",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "yelp-fusion": "^1.0.3"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
